Gap between header and body is fixed

--- a/src/CoronaResult.css
+++ b/src/CoronaResult.css
@@ -1,10 +1,10 @@
 .CoronaResult {
     text-align: left;
     background-color: #6bbaec;
-    min-height: 58vh;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: right;
     font-size: calc(5px + 2vmin);
     color:whitesmoke;
     border-radius: 2px solid red;
@@ -14,7 +14,7 @@
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    padding-top: 2px;
+    padding-top: 0px;
     margin-top: 2px;
   }
   
